@@ -6,7 +6,7 @@
 # at the window to make sure it appears as expected.  Individual tests
 # are kept in separate ".tcl" files in this directory.
 #
-# RCS: @(#) $Id: visual_bb.test,v 1.6 2002/07/13 20:28:36 dgp Exp $
+# RCS: @(#) $Id: visual_bb.test,v 1.7 2002/07/14 18:31:48 dgp Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -40,6 +40,11 @@ proc lpr {c args} {
     exec lpr <<[eval [list $c postscript] $args]
 }
 
+proc end {} {
+    cleanupTests
+    set ::EndOfVisualTests 1
+}
+
 test 1.1 "running visual tests" {userInteraction} {
     #-------------------------------------------------------
     # The code below create the main window, consisting of a
@@ -61,7 +66,7 @@ test 1.1 "running visual tests" {userInteraction} {
 
     menubutton .menu.file -text "File" -menu .menu.file.m
     menu .menu.file.m
-    .menu.file.m add command -label "Quit" -command cleanupTests
+    .menu.file.m add command -label "Quit" -command end
     
     menubutton .menu.group1 -text "Group 1" -menu .menu.group1.m
     menu .menu.group1.m
@@ -109,4 +114,6 @@ test 1.1 "running visual tests" {userInteraction} {
 
 if {![testConstraint userInteraction]} {
     cleanupTests
+} else {
+    vwait EndOfVisualTests
 }
